--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "constructs": "^10.3.0",
     "geojson": "^0.5.0",
     "google-map-react": "^2.2.1",
+    "lodash": "^4.17.21",
     "mapbox-gl": "^3.3.0",
     "primeflex": "^3.3.1",
     "primeicons": "^7.0.0",
@@ -32,11 +33,12 @@
   },
   "devDependencies": {
     "@types/google-map-react": "^2.1.10",
+    "@types/lodash": "^4.17.1",
     "@types/mapbox-gl": "^3.1.0",
     "@types/node": "^20.12.8",
+    "@types/react": "^18.2.66",
     "@types/react-dom": "^18.2.22",
     "@types/react-helmet": "^6.1.11",
-    "@types/react": "^18.2.66",
     "@typescript-eslint/eslint-plugin": "^7.2.0",
     "@typescript-eslint/parser": "^7.2.0",
     "@vitejs/plugin-react-swc": "^3.5.0",
