--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@uidotdev/usehooks": "^2.4.1",
     "aws-cdk-lib": "^2.140.0",
     "axios": "^1.6.8",
     "constructs": "^10.3.0",
