--- a/tsconfig.json
+++ b/tsconfig.json
@@ -16,5 +16,8 @@
     "noEmit": true,
     "jsx": "react-jsx"
   },
+  "ts-node": {
+    "esm": true
+  },
   "exclude": ["node_modules", "cdk.out", "build", "public"]
 }
