--- a/tsconfig.cdk.json
+++ b/tsconfig.cdk.json
@@ -1,8 +1,8 @@
 {
   "compilerOptions": {
-    "target": "ES2020",
-    "module": "commonjs",
-    "lib": ["es2020", "dom"],
+    "target": "ES6",
+    "module": "ES6",
+    "lib": ["ES6", "dom"],
     "declaration": true,
     "strict": true,
     "noImplicitAny": true,
@@ -17,8 +17,7 @@
     "inlineSources": true,
     "experimentalDecorators": true,
     "strictPropertyInitialization": false,
-    "typeRoots": ["./node_modules/@types"],
-    "allowImportingTsExtensions": true
+    "typeRoots": ["./node_modules/@types"]
   },
   "exclude": ["node_modules", "cdk.out"]
 }
