--- a/.github/workflows/cdk-deploy.yml
+++ b/.github/workflows/cdk-deploy.yml
@@ -9,8 +9,7 @@ jobs:
       - run: npm install
       - run: npm run build
       - run: cp ./tsconfig.cdk.json ./tsconfig.json
-      - name: tsc
-        uses: stepek/tsc-action@master
+      - run: tsc
       - name: cdk diff
         uses: youyo/aws-cdk-github-actions@v2
         with:
