--- a/package.json
+++ b/package.json
@@ -52,5 +52,8 @@
     "source-map-support": "^0.5.21",
     "typescript": "^5.2.2",
     "vite": "^5.2.0"
+  },
+  "engines": {
+    "node": "18.x"
   }
 }
