--- a/tsconfig.cdk.json
+++ b/tsconfig.cdk.json
@@ -1,23 +1,25 @@
 {
   "compilerOptions": {
-    "target": "ES2020",
+    "target": "ES2021",
     "module": "commonjs",
-    "lib": ["es2020", "dom"],
-    "declaration": true,
+    "lib": ["ES2021"],
+    "outDir": "lib",
+    "rootDir": "src",
     "strict": true,
+    "esModuleInterop": true,
+    "forceConsistentCasingInFileNames": true,
+    "skipLibCheck": true,
+    "moduleResolution": "node",
+    "resolveJsonModule": true,
     "noImplicitAny": true,
-    "strictNullChecks": true,
     "noImplicitThis": true,
-    "alwaysStrict": true,
-    "noUnusedLocals": false,
-    "noUnusedParameters": false,
     "noImplicitReturns": true,
-    "noFallthroughCasesInSwitch": false,
-    "inlineSourceMap": true,
-    "inlineSources": true,
+    "strictNullChecks": true,
+    "strictFunctionTypes": true,
+    "strictPropertyInitialization": true,
     "experimentalDecorators": true,
-    "strictPropertyInitialization": false,
-    "typeRoots": ["./node_modules/@types"]
+    "emitDecoratorMetadata": true
   },
+  "include": ["src/**/*.ts"],
   "exclude": ["node_modules", "cdk.out"]
 }
