--- a/tsconfig.cdk.json
+++ b/tsconfig.cdk.json
@@ -1,7 +1,8 @@
 {
   "compilerOptions": {
     "target": "ES2021",
-    "module": "commonjs",
+    "module": "ESNext",
+    "moduleResolution": "node",
     "lib": ["ES2021"],
     "outDir": "lib",
     "rootDir": "src",
@@ -9,7 +10,6 @@
     "esModuleInterop": true,
     "forceConsistentCasingInFileNames": true,
     "skipLibCheck": true,
-    "moduleResolution": "node",
     "resolveJsonModule": true,
     "noImplicitAny": true,
     "noImplicitThis": true,
