--- a/tsconfig.cdk.json
+++ b/tsconfig.cdk.json
@@ -1,25 +1,23 @@
 {
   "compilerOptions": {
-    "target": "ES2021",
+    "target": "ESNext",
     "module": "ESNext",
-    "moduleResolution": "node",
-    "lib": ["ES2021"],
-    "outDir": "lib",
-    "rootDir": "src",
+    "lib": ["ESNext", "dom"],
+    "declaration": true,
     "strict": true,
-    "esModuleInterop": true,
-    "forceConsistentCasingInFileNames": true,
-    "skipLibCheck": true,
-    "resolveJsonModule": true,
     "noImplicitAny": true,
-    "noImplicitThis": true,
-    "noImplicitReturns": true,
     "strictNullChecks": true,
-    "strictFunctionTypes": true,
-    "strictPropertyInitialization": true,
+    "noImplicitThis": true,
+    "alwaysStrict": true,
+    "noUnusedLocals": false,
+    "noUnusedParameters": false,
+    "noImplicitReturns": true,
+    "noFallthroughCasesInSwitch": false,
+    "inlineSourceMap": true,
+    "inlineSources": true,
     "experimentalDecorators": true,
-    "emitDecoratorMetadata": true
+    "strictPropertyInitialization": false,
+    "typeRoots": ["./node_modules/@types"]
   },
-  "include": ["src/**/*.ts"],
   "exclude": ["node_modules", "cdk.out"]
 }
