add api key to env in github action

--- a/.github/workflows/cdk-deploy.yml
+++ b/.github/workflows/cdk-deploy.yml
@@ -8,6 +8,8 @@ jobs:
       - uses: actions/checkout@v4
       - run: npm install
       - run: npm run build
+        env:
+          VITE_GMAPS_API_KEY: ${{ secrets.API_KEY }}
       - run: cp ./tsconfig.cdk.json ./tsconfig.json
       - run: pwd
       - run: ls -l
